--- a/src/pages/customer-support.astro
+++ b/src/pages/customer-support.astro
@@ -195,7 +195,7 @@ const howItWorksSteps = [
         </h2>
       </div>
 
-      <SupportServicesGrid services={supportServices} buttonText="Find my assistant" openModal={true} />
+      <SupportServicesGrid services={supportServices} buttonText="Request a demo" openModal={true} />
     </div>
   </section>
 
