--- a/src/pages/customer-support.astro
+++ b/src/pages/customer-support.astro
@@ -21,14 +21,14 @@ const testimonials = [
     name: "Lori Grisham",
     role: "Operations Manager",
     company: "The Hero Co",
-    image: "/images/client-pictures/Athena-Simpson.jpeg"
+    image: "/images/client-pictures/lori-g-jpg.webp"
   },
   {
     quote: "Hiring skilled customer service professionals was one of the best decisions we've made. Their proactive approach has helped us build stronger relationships and loyalty with our clients.",
     name: "Eugene Min",
     role: "Founder",
     company: "Quilt Software",
-    image: "/images/client-pictures/Ann-Hambly.jpeg"
+    image: "/images/client-pictures/Eugene-Min-jpg.webp"
   }
 ];
 
