--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -28,6 +28,7 @@ import services from '../data/services.json';
             title={service.title}
             description={service.description}
             icon={service.icon}
+            url={service.url}
           />
         ))}
       </div>
