--- a/src/pages/finance-support-anchor-page.astro
+++ b/src/pages/finance-support-anchor-page.astro
@@ -14,14 +14,14 @@ const testimonials = [
     name: "Antonio D'alelio",
     role: "CEO",
     company: "Lilly's Fresh Pasta",
-    image: "/images/client-pictures/Ann-Hambly.jpeg"
+    image: "/images/client-pictures/Antonio-DAlelio-jpg.webp"
   },
   {
     quote: "Our accountant is also trained in NetSuite and has customized our entire company's experience to enable real-time reports and data that keep us on the same page with clarity and accountability.",
     name: "Micah Osborne",
     role: "CFO",
     company: "Stratum Nutrition",
-    image: "/images/client-pictures/Ed-Mafoud.jpeg"
+    image: "/images/client-pictures/Micah-Osborne-jpg.webp"
   },
   {
     quote: "It's hard to believe that for $22/hr we're able to get help preparing for tax and financial reporting and so much more. Accounts Receivable is another headache that I subtracted from my life, thanks to Helm!",
@@ -168,7 +168,7 @@ const howItWorksSteps = [
         <div>
           <video
             controls
-            poster="/images/financial-support-page/Why Choose Our Financial Support.webp"
+            poster="/images/financial-support-page/Elaine-Burr-video-thumbnail.png"
             class="w-full rounded-xl shadow-xl"
             style="max-height: 500px; object-fit: cover;"
           >
