--- a/src/pages/finance-support-anchor-page.astro
+++ b/src/pages/finance-support-anchor-page.astro
@@ -197,7 +197,7 @@ const howItWorksSteps = [
         </h2>
       </div>
 
-      <SupportServicesGrid services={supportServices} buttonText="Find my assistant" openModal={true} />
+      <SupportServicesGrid services={supportServices} buttonText="Get a quote" openModal={true} />
     </div>
   </section>
 
